BUG: 243618

Retrigger lid close event if the lid is closed and the profile is changed.

svn path=/trunk/KDE/kdebase/workspace/; revision=1194869